# GPU-Exponential-Integrator

./: CMakeLists.txt  Doxyfile  README.md
cmake/: FindMKL.cmake  FindMagma.cmake
docs/html/: dir_615b79582baec0061088d96b1744a376.html  dir_95a1a294135279143de95c843f2b0d04.html  dir_95a1a294135279143de95c843f2b0d04.js  dir_95b97ed12c96efddfa3fcd71ef946f3b.html  dirs.html  dirs.js  example_8c.html  example_8c.js  example_8c_source.html  files.html  files.js  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  gpu__sparse__neti_8c.html  gpu__sparse__neti_8c.js  gpu__sparse__neti_8c_source.html  gpu__sparse__neti_8h.html  gpu__sparse__neti_8h.js  gpu__sparse__neti_8h_source.html  index.html  navtree.js  navtreeindex.js  neti__types_8h.html  neti__types_8h.js  neti__types_8h_source.html  zfill_8c.html  zfill_8c.js  zfill_8c_source.html  zfill_8h.html  zfill_8h.js  zfill_8h_source.html
docs/html/search/: all_63.js  all_66.js  all_67.js  all_6d.js  all_6e.js  all_73.js  all_7a.js  defines_61.js  files_67.js  files_7a.js  functions_67.js  functions_7a.js  search.js  variables_73.js
docs/latex/: dir_615b79582baec0061088d96b1744a376.tex  dir_95a1a294135279143de95c843f2b0d04.tex  dir_95b97ed12c96efddfa3fcd71ef946f3b.tex  dirs.tex  doxygen.sty  example_8c.tex  files.tex  gpu__sparse__neti_8c.tex  gpu__sparse__neti_8h.tex  neti__types_8h.tex  refman.tex  zfill_8c.tex  zfill_8h.tex
src/: CMakeLists.txt  gpu_sparse_neti.h  neti_types.h
src/magma_test/: example.c
src/neti/: gpu_sparse_neti_d.c  gpu_sparse_neti_s.c
src/test/magma_test/: zfill.c
